--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
@@ -101,6 +101,7 @@
         <div class="mypage_wrap">
             <h2>마이페이지</h2>
             <div class="mypage_contents">
+            	<div id ="left_menu"></div>
                 <div class="contents_left">
                   <div class="myinfo_wrap">
                     <div class="myinfo_pic"><img src="/resources/img/img_new/myinfo_da_pic.png" alt=""></div>
