--- a/src/main/resources/static/css/common_new.css
+++ b/src/main/resources/static/css/common_new.css
@@ -845,13 +845,25 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .works_info_wrap .works_info_right .btn_worksInfo_wrap .btn_list{width: 100%;font-size: 20px;color: #ffffff;background: #969696 url("../img/img_new/ico_list.png") 30% 50% no-repeat;padding: 16px 0 16px 30px;}
 .contents_showingoff_wrap{margin-top: 30px;display: flex;}
 .contents_showingoff_wrap .showingoff_con_left{padding-right: 15px;}
-.contents_showingoff_wrap .showingoff_con_left .img{width: 300px;display: table-cell;vertical-align: top;}
+.contents_showingoff_wrap .showingoff_con_left .img{
+    width: 300px;
+    height: 300px;
+    object-fit: contain;
+    display: table-cell;
+    vertical-align: top;
+}
 .contents_showingoff_wrap .showingoff_con_left .con_r{display: table-cell;padding-left: 30px;position: relative;}
 .contents_showingoff_wrap .showingoff_con_left .con_r h4{font-size: 30px;font-weight: 500;}
 .contents_showingoff_wrap .showingoff_con_left .con_r p{margin-top: 20px;line-height: 25px;font-size: 16px;}
 .contents_showingoff_wrap .showingoff_con_left .con_r .btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 90.8%;right: 0;}
 .contents_showingoff_wrap .showingoff_con_right{}
-.contents_showingoff_wrap .showingoff_con_right .img{width: 300px;display: table-cell;vertical-align: top;}
+.contents_showingoff_wrap .showingoff_con_right .img{
+	width: 300px;
+    height: 300px;
+    object-fit: contain;
+    display: table-cell;
+    vertical-align: top;
+}
 .contents_showingoff_wrap .showingoff_con_right .con_r{display: table-cell;padding-left: 30px;position: relative;}
 .contents_showingoff_wrap .showingoff_con_right .con_r h4{font-size: 30px;font-weight: 500;}
 .contents_showingoff_wrap .showingoff_con_right .con_r p{margin-top: 20px;line-height: 25px;font-size: 16px;}
