대리 조수빈 거래 상세페이지 수정사항 적용

--- a/src/main/resources/templates/thymeleaf/fo/deal/workDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/workDetail.html
@@ -769,7 +769,7 @@ function workList(){
 		var html = '';
 		for(var i=0; i<result.workList.length; i++){
 			html +='<div class="swiper-slide hd-div">';
-			html +='	<a href="/deal/workDetail?SqNumber='+result.workList[i].workSq+'">';
+			html +='	<a href="/deal/workDetail?SqNumber='+work.workList[i].workSq+'">';
 			html +='		<img src="'+result.workList[i].workMainImgUrl+'" class="hd-img" style="width:100&;"/>';
 			html +='		<div class="hd-text">';
 			html +='			<h4 style="height:100px;">'+result.workList[i].artstActvtyNm+'('+result.workList[i].artstBirthYear+')</h4>';
