--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -377,6 +377,12 @@ top:0;
 /*10.04 정영우 추가*/
 .swi-box1 {
     position: relative;
+    z-index: 1;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	transition-property: transform;
+	box-sizing: content-box;
 }
 .swi-box1::before {
     content: "";
@@ -2040,7 +2046,6 @@ input[type="radio"]:checked + label span {
 .conbg{
     background-color: #f9f9f9;
     height: 100%;
-    padding-bottom: 100px;
 }
 .the-more{
     position: absolute;
