--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -96,6 +96,7 @@
     
     <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     <link type="text/css" rel="stylesheet" href="/resources/css/common_new.css"/>
+    <link type="text/css" rel="stylesheet" href="/resources/css/ui_pc.css"/>
 </head>
 <body>
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
@@ -201,9 +202,10 @@
     				
     				if(list.artistInfo) {
 	    				setArtstInfoHtml();
+	    				workList(work);
     				}
     				
-    				setOtherComtInfoHtml();
+    				// setWorkList(data);
     				setCommentInfoHtml();
     				
     				ckClsHide(); // ck에디터 태그들 감춤
@@ -545,11 +547,47 @@
   			myPageWrap.append(html).trigger("create");
     	}
     	
-    	// 다른 자랑하기 html 생성
-    	function setOtherComtInfoHtml() {
-    		var container = $("#container");
-    		container.append(setOtherComtHtml(showOff.mbrNcknm, otherComt, '자랑하기'));
+    	//작가의 다른 자랑하기 리스트
+    	function workList(work, words){
+    		var artstInfo = list["artistInfo"];
+    		var myPageWrap = $(".mypage_wrap");
+    		var titlehtml = '';
+    		titlehtml += '<div class="contents conbg">';
+			titlehtml += '	<div class="cont-title2 max-1500">';
+			titlehtml += '		<h3>'+ artstInfo.artstActvtyNm +'님의 다른 작품 보기</h3>';
+			titlehtml += '	</div>';
+    		if(work.workList.length > 0){
+    			var html = '';
+    			for(var i=0; i<work.workList.length; i++){
+    				html +='	<div class="swi-box1 max-1500">';
+    				html +='	<div class="swiper-slide hd-div">';
+    				html +='	<a href="/deal/workDetail?SqNumber='+work.workList[i].workSq+'">';
+    				html +='		<img src="'+work.workList[i].workMainImgUrl+'" class="hd-img" style="width:100&;"/>';
+    				html +='		<div class="hd-text">';
+    				html +='			<h4 style="height:100px;">'+work.workList[i].artstActvtyNm+'('+work.workList[i].artstBirthYear+')</h4>';
+    				html +='			<div class="hd-d1" >'+work.workList[i].workNm+'('+work.workList[i].workProdcYear+')';
+    				html +='			<br/>소재 '+work.workList[i].workMatrl+', '+work.workList[i].workSizeWidth+' x '+work.workList[i].workSizeDepth+'cm</div>';
+    	     	   	html +='		</div>';
+    	     	  	html +='	</a>';
+    	     	 	html +='	</div>';
+    	     	 	html +='	</div';
+    	     	 	html +='</div>';
+    				if (i==3) {
+						break;
+					}
+    			}
+    			myPageWrap.append(titlehtml).trigger("create");
+    			myPageWrap.append(html).trigger("create");
+    		}
     	}
+    	
+    	// 다른 자랑하기 html 생성
+    	/*
+    	function setWorkList(words) {
+    		var container = $("#container");
+    		container.append(work.workList(artstInfo.artstActvtyNm), '작품');
+    	}
+    	*/
     	
     	// 댓글 정보 html 생성
     	function setCommentInfoHtml() {
@@ -662,7 +700,6 @@
 
     		/* 모달 상세 왼쪽이미지 */
     		var bigPic2 = document.querySelector(".big2")
-    		var smallPics2 = document.querySelectorAll(".small2")
 
     		for(var i = 0 ; i < smallPics2.length ; i++){
     		  smallPics2[i].addEventListener("mouseover", changepic2);
@@ -1172,6 +1209,8 @@
     			closeModal("workSuggestModal");
     			openModal("RequestPictureModal");
     		}
+    		
+    		
     	}
     	
     	// 요청하기 모달 확인 버튼 이벤트
