마이페이지 프로필링크 복사하기 이미 없을 때도 타인페이지 링크 복사할수 있도록 수정사항 적용

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
@@ -136,7 +136,7 @@ function setMyInfo(data){
 	if(data.mbrProfileImgUrl != null && data.mbrProfileImgUrl != ""){
 		html += '<div class="myinfo_pic" ><a onclick="copy_to_clipboard()"><img src="'+data.mbrProfileImgUrl+'" alt=""></a></div>';
 	}else{
-		html += '<div class="myinfo_pic"><img src="/resources/img/mypage/icon-u.png"></div>';
+		html += '<div class="myinfo_pic"><a onclick="copy_to_clipboard()"><img src="/resources/img/mypage/icon-u.png"></a></div>';
 	}
     html += '<div class="myinfo_con">';
     html += '  <ul>';
