대리 조수빈 작품 상세정보 다른 작품 보기 수정 작업

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -1181,7 +1181,7 @@ function selectBoa(workSq){
 function setBoaHtml(data) {
 	var boaList = data.boaList;
 	var boaHtml = '';
-	boaHtml += '	<div class="sub-title mg_t77"><h3>자랑하기</h3></div>';
+	boaHtml += '	<div class="sub-title mg_t77 max-1500"><h3>자랑하기</h3></div>';
 	boaHtml += '		<div class="contents_showingoff_wrap">';
 	boaHtml += '			<div class="showingoff_con_left" style="width:50%">';
 	boaHtml += '				<div class="img" style="width:300px; height:300px">';
