--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -6297,6 +6297,23 @@ p.dib{display:inline-block !important;}
     cursor: pointer;
     transform: translate(-50%, -50%);
     }
+    
+.sog-6{}
+.sog-6:after{
+    content: '';
+    width: 4.2rem;
+    height: 3.8rem;
+    background-image: url('../img/mypage/ico_myinfo_alarm.png');
+    background-size: 100%;
+    z-index: 9;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    display: block;
+    cursor: pointer;
+    transform: translate(-50%, -50%);
+    filter: invert(51%) sepia(99%) saturate(5462%) hue-rotate(3deg) brightness(105%) contrast(84%);
+    }
 .after-show .mb-bg:after{content: '';position: fixed;width: 100%;height: 100%;background-color: rgb(255 255 255 / 0%);top: 0;left: 0;z-index: 6;}
 .s-hov2{
 	display:none;
